[gd_scene load_steps=2 format=2]

[ext_resource path="res://settings/Settings.gd" type="Script" id=1]

[node name="Settings" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 900.0
margin_bottom = 1000.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 368.0
margin_right = 900.0
margin_bottom = 382.0
text = "Sort folder"

[node name="SortFolder" type="LineEdit" parent="VBoxContainer"]
margin_top = 392.0
margin_right = 900.0
margin_bottom = 416.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 426.0
margin_right = 900.0
margin_bottom = 440.0
text = "Target folder"

[node name="TargetFolder" type="LineEdit" parent="VBoxContainer"]
margin_top = 450.0
margin_right = 900.0
margin_bottom = 474.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 484.0
margin_right = 900.0
margin_bottom = 488.0

[node name="ShrinkOverride" type="CheckButton" parent="VBoxContainer"]
margin_top = 498.0
margin_right = 900.0
margin_bottom = 538.0
text = "Shrink Override"

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 548.0
margin_right = 900.0
margin_bottom = 562.0
text = "Shrink Override Value"

[node name="ShrinkOverrideValue" type="HSlider" parent="VBoxContainer"]
margin_top = 572.0
margin_right = 900.0
margin_bottom = 588.0
min_value = 0.2
max_value = 10.0
step = 0.0
value = 1.0
tick_count = 11
ticks_on_borders = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 598.0
margin_right = 900.0
margin_bottom = 602.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 612.0
margin_right = 900.0
margin_bottom = 632.0
text = "<- Back"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_Button_pressed"]
